// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifGrid Debe mostrar items cuando se cargan imagen con useFetchGifs 1`] = `
<Fragment>
  <h3>
    xmen
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Prueba de cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Prueba de cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en GifGrid debe de mostrarse correctamente 1`] = `
<Fragment>
  <h3>
    xmen
  </h3>
  <p
    className="animate__animated animate__fadeIn"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
